initial push added BoardPage

--- a/web/styles/custom-properties.css
+++ b/web/styles/custom-properties.css
@@ -1,8 +1,9 @@
+
 :root {
   --wide-container: 60rem;
   --narrow-container: 40rem;
 
-  --font-family-sans: -apple-system, BlinkMacSystemFont, sans-serif;
+  --font-family-sans: -apple-system, 'Roboto', sans-serif;
 
   --color-black: #202123;
   --color-dark-gray: #32373e;
