--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -1,4 +1,5 @@
 @import './custom-properties.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 html {
   font-family: var(--font-family-sans);
