trying to clear both after services float

--- a/web/styles/custom-properties.css
+++ b/web/styles/custom-properties.css
@@ -1,10 +1,10 @@
-
 :root {
   --wide-container: 60rem;
   --narrow-container: 40rem;
 
   --font-family-sans: -apple-system, 'Roboto', sans-serif;
-
+  /* --font-family: 'Seymour One', sans-serif; */
+  
   --color-black: #202123;
   --color-dark-gray: #32373e;
   --color-gray: #697a90;
