added BoardPage.module.css and edited how images are rendered on BoardPage

--- a/web/components/sections/ServicesPage.module.css
+++ b/web/components/sections/ServicesPage.module.css
@@ -4,6 +4,7 @@
     justify-content: space-evenly;
     width: 100%;
     text-align: center;
+    align-items: baseline;
   }
   .service {
     width: 30%;
