--- a/web/components/sections/BoardPage.module.css
+++ b/web/components/sections/BoardPage.module.css
@@ -3,13 +3,47 @@
     margin: 0;
     padding: 30px 20%;
 }
-/* .foto {
-    margin: 0 10px ;
-} */
+
+
+.foto {
+    /* display: block; */
+    /* z-index: 98; */
+    /* position: absolute; */
+    -webkit-animation: fadein 2s; /* Safari and Chrome */
+    -moz-animation: fadein 2s; /* Firefox */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera */
+    animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
 @media screen and (max-width: 800px) {
     .foto {
         width: 70%;
-        margin: 0 30% 10px 0;
+        margin: 0 15%!important;
+        float: none !important;
+        clear: both;
     }
 }
