--- a/web/components/sections/EngEsp.module.css
+++ b/web/components/sections/EngEsp.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-color: black;
+    /* background-color: rgba(140, 198, 62, .1); */
     padding: 0 5%;
     text-align: right;
 }
@@ -14,9 +14,9 @@
     margin: auto;
     padding: 10px 0;
     font-size: 2em;
-    color: white;
+    /* color: whi565656te; */
 }
 .button:hover {
-    color: gray;
+    color: #222222;
     text-decoration: underline;
 }
